<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

  <FrameLayout
      android:id="@+id/flFragment"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="-6dp"
      android:src="@drawable/ic_header_bg"
      android:contentDescription="@string/home_header_desc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      app:layout_constraintBottom_toTopOf="@+id/imageView3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/hello_user"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="40dp"
        android:text="@string/home_tagline"
        android:textColor="@color/white"
        android:textSize="30sp" />

  </RelativeLayout>

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="50dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:src="@drawable/ic_account_full"
      android:contentDescription="@string/home_account_icon_desc"
      app:layout_constraintBottom_toTopOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_level"
      android:contentDescription="@string/level_indicator_design_desc"
      android:layout_marginTop="-80dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <RelativeLayout
      android:id="@+id/relativeLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="@+id/imageView3"
      app:layout_constraintStart_toStartOf="@+id/imageView3"
      app:layout_constraintTop_toTopOf="@+id/imageView3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/level_number"
        android:textColor="@color/black"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="54dp"
        android:text="@string/level_tag"
        android:textColor="@color/black" />

  </RelativeLayout>

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curr_level_xp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/teal_primary"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_level_xp"
        android:paddingStart="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="18sp"/>

  </LinearLayout>

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/curr_progress_title"
      android:fontFamily="@font/montserrat_semibold"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:paddingVertical="16dp"
      android:paddingStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="374dp"
      android:layout_height="242dp"
      android:src="@drawable/ic_home_exercise_first"
      android:contentDescription="@string/curr_workout_bg_desc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/curr_workout_section_title"
      android:textColor="@color/white"
      android:fontFamily="@font/montserrat_medium"
      android:paddingTop="30dp"
      android:paddingBottom="20dp"
      android:paddingHorizontal="30dp"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toTopOf="@+id/imageView4" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="270dp"
      android:layout_height="57dp"
      android:fontFamily="@font/montserrat_medium"
      android:paddingStart="30dp"
      android:text="@string/curr_workout_section_none"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <ImageView
      android:layout_width="66dp"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_plus"
      android:contentDescription="@string/add_workout_btn"
      android:paddingBottom="30dp"
      android:layout_marginEnd="40dp"
      app:layout_constraintBottom_toBottomOf="@+id/imageView4"
      app:layout_constraintEnd_toEndOf="@+id/imageView4" />

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavigationView"
      android:layout_width="match_parent"
      android:layout_height="75dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>