<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:layout_marginTop="35dp">

    // current progress
    <TextView
        android:id="@+id/homefragment_textView_currentProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curr_progress_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    // progress bar
    <ProgressBar
        android:id="@+id/homeFragment_progressBar_"
        android:layout_width="155dp"
        android:layout_height="155dp"

        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/progressbar_graphic"
        android:rotation="270"
        android:contentDescription="@string/level_indicator_design_desc"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    // hey, let's exercise
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/homeFragment_progressBar_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/homeFragment_textView_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/hello_user"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/homeFragment_textView_letex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="40dp"
            android:text="@string/home_tagline"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    // level
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/homeFragment_progressBar_"
        app:layout_constraintEnd_toEndOf="@+id/homeFragment_progressBar_"
        app:layout_constraintStart_toStartOf="@+id/homeFragment_progressBar_"
        app:layout_constraintTop_toTopOf="@+id/homeFragment_progressBar_">

        <TextView
            android:id="@+id/homeFragment_textView_levelWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="54dp"
            android:text="@string/level_tag"
            android:textColor="@color/black">
        </TextView>


        <TextView
            android:id="@+id/homeFragment_textView_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="42sp"
            />

    </RelativeLayout>

    // exp number
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeFragment_progressBar_">

        <TextView
            android:id="@+id/homeFragment_textView_currentEXP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_level_xp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/teal_primary"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/homeFragment_textView_maxEXP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_level_xp"
            android:paddingStart="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"/>

    </LinearLayout>

    // bottom cluster
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/curr_workout_bg_desc"
        android:src="@drawable/ic_home_exercise_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homefragment_textView_currentProgress" />
    <TextView
        android:id="@+id/homeFragment_textView_yourWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curr_workout_section_title"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />
    <TextView
        android:id="@+id/homeFragment_textView_yourWorkoutComment"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingStart="30dp"
        android:text="@string/curr_workout_section_none"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/homeFragment_textView_yourWorkout" />

    // add/resume exercise
    <Button
        android:id="@+id/homeFragment_btn_addresumeExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/add_workout_btn"
        android:paddingBottom="30dp"

        android:src="@drawable/ic_plus"
        android:background="@drawable/ic_plus"

        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4" />

    // background
    <ImageView
        android:id="@+id/homeFragment_imageView_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:contentDescription="@string/home_header_desc"
        android:src="@drawable/ic_header_bg"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    // avatar
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/home_account_icon_desc"
        android:src="@drawable/ic_account_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>